added cs 184 projects

--- a/main.css
+++ b/main.css
@@ -24,6 +24,9 @@
 .title { 
   background-color: #000000
   opacity: .4;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .title:before { 
