--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@
 
 
 .title:before { 
-  background-color: #000000
+  background-color: #000000;
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
