added cs 184 projects

--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@
 .title { 
   background-color: #000000;
   height: 100vh;
+  opacity: .6;
   background-repeat: no-repeat;
   background-size: cover;
 }
