--- a/main.css
+++ b/main.css
@@ -24,9 +24,9 @@
 .title { 
   background-color: #000000;
   height: 100vh;
-  opacity: .6;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
 }
 
 .title:before { 
