--- a/main.css
+++ b/main.css
@@ -22,10 +22,8 @@
 
 
 .title { 
-  background-color: #000000;
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-size: cover;
+  position: relative;
+  background: #5C97FF;
   overflow: hidden;
 }
 
