--- a/main.css
+++ b/main.css
@@ -4,16 +4,17 @@
 }
 .nav .navbar-header {
   font-size: 24px;
+  color: #FFFFFF;
   font-weight: bold;
 }
 .nav .container {
-  color: #449d44;
+  color: #FFFFFF;
   padding: 14px 30px;
   text-transform: uppercase;
 }
 
 .nav a{
-  color: #449d44;
+  color: #FFFFFF;
   font-size: 16px;
   text-transform: uppercase;
   font-weight: bold;
@@ -22,7 +23,7 @@
 
 
 .title { 
-  background-color: #3f51b5;
+  background-color: #009688;
 }
 
 
@@ -32,7 +33,7 @@
 }
 
 .title h1 {
-  color: #449d44;
+  color: #FFFFFF;
   font-size: 5vw;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -42,7 +43,7 @@
 
 .title p {
   font-size: 2vw;
-  color: #449d44;
+  color: #B2DFDB;
 }
 /*283018*/
 
