--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@
 
 
 
-.title { 
+body { 
   background-color: #009688;
   height: 100vh;
   background-repeat: no-repeat;
@@ -54,13 +54,13 @@
   padding: 5px;
   display: inline;
 }
-
+/*
 .about-me {
   height: 100vh;
   background-image:url('Berkeley.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-}
+}*/
 
 .about-me .container {
   position: relative;
@@ -80,7 +80,7 @@
 }
 
 .about-me h1 {
-  color: #449d44;
+  color: #FFFFFF;
   font-size: 5vw;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -88,16 +88,16 @@
 
 .about-me p {
   font-size: 1.1vw;
-  color: #449d44;
+  color: #FFFFFF;
   font-weight: bold;
 }
 
-.resume {
+/*.resume {
   height: 100vh;
   background-image:url('Malibu.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-}
+}*/
 
 .resume .resume-body .container {
   position: relative;
@@ -105,7 +105,7 @@
 }
 
 .resume h1 {
-  color: #449d44;
+  color: #FFFFFF;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -113,15 +113,15 @@
 
 .resume p {
   font-size: 30px;
-  color: #449d44;
+  color: #FFFFFF;
 }
 
-.contact-me {
+/*.contact-me {
   height: 100vh;
   background-image:url('Disneyland.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-}
+}*/
 
 .contact-me .contact-me-body .container {
   position: relative;
@@ -130,7 +130,7 @@
 }
 
 .contact-me h1 {
-  color: #449d44;
+  color: #FFFFFF;
   font-size: 72px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
@@ -138,6 +138,6 @@
 /*ffffff*/
 .contact-me p {
   font-size: 30px;
-  color: #449d44;
+  color: #FFFFFF;
 }
 
