--- a/main.css
+++ b/main.css
@@ -1,7 +1,10 @@
+.nav {
+  background-color: #00796B;
+}
+
 .nav li {
   padding: 5px;
   display: inline;
-  background-color: #00796B;
 }
 .nav .navbar-header {
   font-size: 24px;
