--- a/main.css
+++ b/main.css
@@ -30,6 +30,9 @@ body {
   background-color: #009688;
 }
 
+.title {
+  background-color: #000000;
+}
 
 .title .title-body .container {
   position: relative;
