--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ body {
 
 .title h1 {
   color: #FFFFFF;
-  font-size: 5vw;  
+  font-size: 100px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 
@@ -46,7 +46,7 @@ body {
 /*72px*/
 
 .title p {
-  font-size: 2vw;
+  font-size: 50px;
   color: #B2DFDB;
 }
 /*283018*/
