--- a/main.css
+++ b/main.css
@@ -63,6 +63,10 @@ body {
   background-size: cover;
 }*/
 
+.about-me {
+  background-color: #B2DFDB;
+}
+
 .about-me .container {
   position: relative;
   top: 50px;
