changing the design of the website

--- a/main.css
+++ b/main.css
@@ -33,16 +33,16 @@ body {
 
 .title .title-body .container {
   position: relative;
-  top: 80px;
+  top: 160px;
 }
 
-.title h1 {
+/*.title h1 {
   color: #FFFFFF;
   font-size: 80px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 
-}
+}*/
 /*72px*/
 
 .title p {
