changing the design of the website

--- a/main.css
+++ b/main.css
@@ -36,13 +36,13 @@ body {
   top: 120px;
 }
 
-/*.title h1 {
+.title h1 {
   color: #FFFFFF;
   font-size: 80px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 
-}*/
+}
 /*72px*/
 
 .title p {
