--- a/main.css
+++ b/main.css
@@ -27,14 +27,13 @@
 
 
 body { 
-  background-color: #FFFFFF;
+  background-color: #00796B;
 }
 
 
 .title .title-body .container {
   position: relative;
   top: 120px;
-  background-color: #00796B
 }
 
 .title h1 {
@@ -48,7 +47,7 @@ body {
 
 .title p {
   font-size: 42px;
-  color: #B2DFDB;
+  color: #4DB6AC;
 }
 /*283018*/
 
@@ -64,14 +63,14 @@ body {
   background-size: cover;
 }*/
 
-/*.about-me {
-  
-}*/
+.about-me {
+  background-color: #009688;
+  top: 200px;
+}
 
 .about-me .container {
   position: relative;
   top: 200px;
-  background-color: #009688;
 }
 
 /*.about-me .container .row .about-me-picture {
