--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ body {
 
 .about-me {
   background-color: #009688;
-  background-position: center center
+  background-position: 0px 200px;
 }
 
 .about-me .container {
