--- a/main.css
+++ b/main.css
@@ -34,6 +34,7 @@ body {
 
 .title .title-body .container {
   position: relative;
+  top: 10px;
 }
 
 .title .title-body .container .title-picture {
