changing the design of the website

--- a/main.css
+++ b/main.css
@@ -26,15 +26,13 @@
 
 
 
-/*body { 
+.title { 
   background-color: #00796B;
   padding-top: 80px;
-}*/
+}
 
 
 .title .title-body .container {
-  background-color: #00796B;
-  padding-top: 80px;
   position: relative;
 }
 
@@ -65,15 +63,13 @@
   background-size: cover;
 }*/
 
-/*.about-me {
+.about-me {
   padding-top: 10px;
   background-color: #009688;
-}*/
+}
 
 .about-me .container {
-  padding-top: 10px;
   position: relative;
-  background-color: #009688;
 }
 
 /*.about-me .container .row .about-me-picture {
