--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
   background-color: #004D40;
 }
 
-.nav li {
+/*.nav li {
   padding: 5px;
   display: inline;
 }
@@ -22,7 +22,7 @@
   font-size: 16px;
   text-transform: uppercase;
   font-weight: bold;
-}
+}*/
 
 
 
