--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-/*.nav {
+.nav {
   background-color: #004D40;
 }
 
@@ -22,7 +22,7 @@
   font-size: 16px;
   text-transform: uppercase;
   font-weight: bold;
-}*/
+}
 
 
 
