--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
-/*.nav {
+.navbar {
   background-color: #004D40;
 }
 
-.nav li {
+/*.nav li {
   padding: 5px;
   display: inline;
 }
@@ -22,8 +22,8 @@
   font-size: 16px;
   text-transform: uppercase;
   font-weight: bold;
-}*/
-
+}
+*/
 
 
 body { 
