editting the theme

--- a/main.css
+++ b/main.css
@@ -1,178 +1,4 @@
-.navbar {
-  background-color: #004D40;
-  color: #212121;
-
-}
-
-.navbar a {
-  color: #212121;
-}
-/*.nav li {
-  padding: 5px;
-  display: inline;
-}
-.nav .navbar-header {
-  font-size: 24px;
+.header-content-inner p {
   color: #FFFFFF;
-  font-weight: bold;
+  opacity: .9;
 }
-.nav .container {
-  color: #FFFFFF;
-  padding: 14px 30px;
-  text-transform: uppercase;
-}
-
-.nav a{
-  color: #FFFFFF;
-  font-size: 16px;
-  text-transform: uppercase;
-  font-weight: bold;
-}
-*/
-
-
-body { 
-  background-color: #00796B;
-  padding-top: 80px;
-}
-
-
-.title .title-body .container {
-  position: relative;
-}
-
-.title h1 {
-  color: #FFFFFF;
-  font-size: 80px;  
-  font-family: 'Shift', sans-serif;
-  font-weight: bold;
-
-}
-/*72px*/
-
-.title p {
-  font-size: 42px;
-  color: #4DB6AC;
-}
-/*283018*/
-
-/*.title li {
-  padding: 5px;
-  display: inline;
-}*/
-/*
-.about-me {
-  height: 100vh;
-  background-image:url('Berkeley.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-}*/
-
-.about-me {
-  padding-top: 10px;
-  background-color: #009688;
-}
-
-.about-me .container {
-  position: relative;
-}
-
-/*.about-me .container .row .about-me-picture {
-  position: relative;
-  top: 35px;
-  right: 0px;
-}*/
-
-/*.about-me img {
-  max-width: 55%;
-  width: 55%;
-  height: auto;
-}*/
-
-/*.about-me h1 {
-  color: #FFFFFF;
-  font-size: ;  
-  font-family: 'Shift', sans-serif;
-  font-weight: bold;
-}*/
-
-.about-me p {
-  font-size: 20px;
-  color: #FFFFFF;
-}
-
-/*.resume {
-  height: 100vh;
-  background-image:url('Malibu.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-}*/
-
-.projects {
-  padding-top: 10px;
-}
-
-.projects .projects .container {
-  position: relative;
-}
-
-
-.projects h1 {
-  color: #FFFFFF;
-  font-size: 72px;  
-  font-family: 'Shift', sans-serif;
-  font-weight: bold;
-}
-
-.projects p {
-  font-size: 30px;
-  color: #FFFFFF;
-}
-
-.resume {
-  padding-top: 10px;
-}
-
-.resume .resume-body .container {
-  position: relative;
-}
-
-
-.resume h1 {
-  color: #FFFFFF;
-  font-size: 72px;  
-  font-family: 'Shift', sans-serif;
-  font-weight: bold;
-}
-
-.resume p {
-  font-size: 30px;
-  color: #FFFFFF;
-}
-
-/*.contact-me {
-  height: 100vh;
-  background-image:url('Disneyland.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-}*/
-
-.contact-me {
-  padding-top: 10px;
-}
-
-.contact-me .contact-me-body .container {
-  position: relative;}
-
-.contact-me h1 {
-  color: #FFFFFF;
-  font-size: 72px;  
-  font-family: 'Shift', sans-serif;
-  font-weight: bold;
-}
-/*ffffff*/
-.contact-me p {
-  font-size: 30px;
-  color: #FFFFFF;
-}
-
