--- a/main.css
+++ b/main.css
@@ -3,11 +3,6 @@
   padding-bottom: 40px;
 }
 
-/*!
- * Start Bootstrap - Creative Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
 
 html,
 body {
@@ -57,7 +52,7 @@ p {
 }
 
 .bg-primary {
-    background-color: #f05f40;
+    background-color: #f0f0f0;
 }
 
 .bg-dark {
