--- a/main.css
+++ b/main.css
@@ -90,12 +90,12 @@ aside {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
-    color: #f05f40;
+    color:  #111;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-    color: #eb3812;
+    color:  #111;
 }
 
 .navbar-default .nav > li>a,
@@ -120,7 +120,7 @@ aside {
 
 @media(min-width:768px) {
     .navbar-default {
-        border-color: rgba(255,255,255,.3);
+        border-color: transparent;
         background-color: transparent;
     }
 
@@ -144,8 +144,8 @@ aside {
     }
 
     .navbar-default.affix {
-        border-color: rgba(34,34,34,.05);
-        background-color: "transparent";
+        border-color: transparent;
+        background-color: transparent;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand {
@@ -205,7 +205,7 @@ header .header-content .header-content-inner p {
     margin-bottom: 50px;
     font-size: 16px;
     font-weight: 300;
-    color: rgba(255,255,255,.7);
+    color: rgba(0,0,0,.7);
 }
 
 @media(min-width:768px) {
