--- a/main.css
+++ b/main.css
@@ -95,17 +95,18 @@ aside {
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-    color:  #111;
+    color:  #222;
 }
 
 .navbar-default .nav > li>a,
 .navbar-default .nav>li>a:focus {
     font-weight: 700;
-    color: #222;
+    color: #111;
 }
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
+  color: #222
 }
 
 .navbar-default .nav > li.active>a,
@@ -125,22 +126,22 @@ aside {
     }
 
     .navbar-default .navbar-header .navbar-brand {
-        color: color: rgba(0,0,0,.7);
+        color: color: rgba(0,0,0,.9);
     }
 
     .navbar-default .navbar-header .navbar-brand:hover,
     .navbar-default .navbar-header .navbar-brand:focus {
-        color: #111;
+        color: #222;
     }
 
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-        color: rgba(0,0,0,.7);
+        color: rgba(0,0,0,.9);
     }
 
     .navbar-default .nav > li>a:hover,
     .navbar-default .nav>li>a:focus:hover {
-        color: #111;
+        color: #222;
     }
 
     .navbar-default.affix {
@@ -150,22 +151,22 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color:#111;
+        color: #111;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #111;
+        color: #222;
     }
 
     .navbar-default.affix .nav > li>a,
     .navbar-default.affix .nav>li>a:focus {
-        color: #222;
+        color: #111;
     }
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #111;
+        color: #222;
     }
 }
 
@@ -205,7 +206,7 @@ header .header-content .header-content-inner p {
     margin-bottom: 50px;
     font-size: 16px;
     font-weight: 300;
-    color: rgba(0,0,0,.7);
+    color: rgba(0,0,0,.9);
 }
 
 @media(min-width:768px) {
