--- a/main.css
+++ b/main.css
@@ -206,7 +206,7 @@ header .header-content .header-content-inner p {
     margin-bottom: 50px;
     font-size: 16px;
     font-weight: 300;
-    color: rgba(0,0,0,.9);
+    color: rgba(0,0,0,1);
 }
 
 @media(min-width:768px) {
