--- a/main.css
+++ b/main.css
@@ -84,6 +84,7 @@ aside {
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
+    text-shadow: 2px 2px 4px #fff;
 }
 
 .navbar-default .navbar-header .navbar-brand {
@@ -175,13 +176,14 @@ header {
     width: 100%;
     min-height: auto;
     text-align: center;
-    color: #fff;
+    color: #00;
     background-image: url(../img/ocean.JPG);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    text-shadow: 2px 2px 4px #fff;
 }
 
 header .header-content {
@@ -206,7 +208,7 @@ header .header-content .header-content-inner p {
     margin-bottom: 50px;
     font-size: 16px;
     font-weight: 300;
-    color: rgba(255,255,255,0.8);
+    color: rgba(0,0,0,0.8);
 }
 
 
