--- a/main.css
+++ b/main.css
@@ -333,7 +333,7 @@ header .header-content .header-content-inner p {
 
 .btn-default {
     border-color: #fff;
-    color: #222;
+    color: #fff;
     background-color: #444;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
