--- a/main.css
+++ b/main.css
@@ -208,6 +208,7 @@ header .header-content .header-content-inner p {
     margin-bottom: 50px;
     font-size: 16px;
     font-weight: 300;
+    color: #000;
 }
 
 
