--- a/main.css
+++ b/main.css
@@ -123,7 +123,7 @@ aside {
 @media(min-width:768px) {
     .navbar-default {
         border-color: transparent;
-        background-color: transparent;
+        background-color: #fff;;
     }
 
     .navbar-default .navbar-header .navbar-brand {
