--- a/main.css
+++ b/main.css
@@ -123,7 +123,7 @@ aside {
 @media(min-width:768px) {
     .navbar-default {
         border-color: transparent;
-        background-color: #fff;;
+        background-color: transparent;;
     }
 
     .navbar-default .navbar-header .navbar-brand {
@@ -147,7 +147,7 @@ aside {
 
     .navbar-default.affix {
         border-color: transparent;
-        background-color: transparent;
+        background-color: white;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand {
