--- a/main.css
+++ b/main.css
@@ -259,6 +259,11 @@ header .header-content .header-content-inner p {
     margin-bottom: 0;
 }
 
+.portfolio {
+  padding-top: 50px
+}
+
+
 .portfolio-box {
     display: block;
     position: relative;
