--- a/main.css
+++ b/main.css
@@ -173,6 +173,9 @@ aside {
 }
 
 header {
+ padding-top:50px; 
+}
+/* header {
     position: relative;
     width: 100%;
     min-height: auto;
@@ -238,7 +241,7 @@ header .header-content .header-content-inner p {
         max-width: 80%;
         font-size: 18px;
     }
-}
+} */
 
 .section-heading {
     margin-top: 0;
@@ -257,10 +260,6 @@ header .header-content .header-content-inner p {
 
 .service-box p {
     margin-bottom: 0;
-}
-
-.portfolio {
-  padding-top: 50px;
 }
 
 
