--- a/main.css
+++ b/main.css
@@ -80,8 +80,8 @@ aside {
 .navbar-default {
     border-color: rgba(34,34,34,0);
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
-/*     background-color: #84827D; */
-    background-color: transparent;
+    background-color: #84827D;
+/*     background-color: transparent; */
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -123,8 +123,8 @@ aside {
 @media(min-width:768px) {
     .navbar-default {
         border-color: transparent;
-/*         background-color: #84827D; */
-        background-color: transparent;
+        background-color: #84827D;
+/*         background-color: transparent; */
     }
 
     .navbar-default .navbar-header .navbar-brand {
@@ -175,6 +175,11 @@ aside {
 header {
  padding-top:50px; 
 }
+
+@media(min-width:768px) {
+    header {
+      padding-top:50px;
+  }
 /* header {
     position: relative;
     width: 100%;
