trying white background

--- a/main.css
+++ b/main.css
@@ -14,6 +14,15 @@ body {
     font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
 }
 
+body {
+    opacity: 1;
+    transition: 1s opacity;
+}
+body.fade-out {
+    opacity: 0;
+    transition: none;
+}
+
 hr {
     max-width: 50px;
     border-color: #f05f40;
@@ -54,7 +63,8 @@ p {
 
 .bg {
     color: #444;
-    background-color:#84827D;
+/*     background-color:#84827D; */
+    background-color: #fff;
 }
 
 .text-faded {
@@ -76,8 +86,9 @@ aside {
 .navbar-default {
     border-color: rgba(34,34,34,0);
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
-    background-color: #84827D;
+/*     background-color: #84827D; */
 /*     background-color: transparent; */
+    background-color: #fff;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -119,8 +130,9 @@ aside {
 @media(min-width:768px) {
     .navbar-default {
         border-color: transparent;
-        background-color: #84827D;
+/*         background-color: #84827D; */
 /*         background-color: transparent; */
+        background-color: #fff;
     }
 
     .navbar-default .navbar-header .navbar-brand {
@@ -169,12 +181,14 @@ aside {
 }
 
 header {
- padding-top:50px; 
+ padding-top:50px;
+ background-color: #fff;
 }
 
 @media(min-width:768px) {
     header {
       padding-top:50px;
+      background-color: #fff;
   }
 }
 /* header {
