--- a/main.css
+++ b/main.css
@@ -97,8 +97,9 @@ aside {
 .navbar-default .navbar-header .navbar-brand {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
-    font-weight: 1000;
-    color:  #000;
+    font-weight: 700;
+    color:  #444;
+    font-size: 24px;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
@@ -109,7 +110,7 @@ aside {
 .navbar-default .nav > li>a,
 .navbar-default .nav>li>a:focus {
     font-weight: 700;
-    color: #000;
+    color: #444;
 }
 
 .navbar-default .nav > li>a:hover,
@@ -136,7 +137,7 @@ aside {
     }
 
     .navbar-default .navbar-header .navbar-brand {
-        color: color: #000;
+        color: color: #444;
     }
 
     .navbar-default .navbar-header .navbar-brand:hover,
@@ -161,7 +162,7 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #000;
+        color: #444;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -171,7 +172,7 @@ aside {
 
     .navbar-default.affix .nav > li>a,
     .navbar-default.affix .nav>li>a:focus {
-        color: #000;
+        color: #444;
     }
 
     .navbar-default.affix .nav > li>a:hover,
