--- a/main.css
+++ b/main.css
@@ -315,7 +315,7 @@ header .header-content .header-content-inner p {
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
     padding: 0 15px;
-    font-family: 'Poppins';
+    font-family: 'bebas-neue';
 }
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
