--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
 }
 
 body {
-    font-family: 'Poppins';
+    font-family: 'Oswald', sans-serif;
 }
 
 body {
@@ -51,7 +51,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Poppins';
+    font-family: 'Oswald', sans-serif;
 }
 
 p {
@@ -85,7 +85,7 @@ aside {
 
 .navbar-default {
     border-color: rgba(34,34,34,0);
-    font-family: 'Poppins';
+    font-family: 'Oswald', sans-serif;
 /*     background-color: #84827D; */
 /*     background-color: transparent; */
     background-color: #fff;
@@ -96,7 +96,7 @@ aside {
 
 .navbar-default .navbar-header .navbar-brand {
 /*     text-transform: uppercase; */
-    font-family: 'Poppins';
+    font-family: 'Oswald', sans-serif;
     font-weight: 700;
     color:  #444;
     font-size: 32px;
@@ -314,8 +314,8 @@ header .header-content .header-content-inner p {
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-    padding: 0 15px;
-    font-family: 'bebas-neue';
+    padding: 0 18px;
+    font-family: 'Oswald', sans-serif;
 }
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
@@ -465,7 +465,7 @@ fieldset[disabled] .btn-primary.active {
     border: 0;
     border-radius: 300px;
     text-transform: uppercase;
-    font-family: 'Poppins';
+    font-family: 'Oswald', sans-serif;
     font-weight: 700;
 }
 
