--- a/main.css
+++ b/main.css
@@ -98,7 +98,7 @@ aside {
 /*     text-transform: uppercase; */
     font-family: 'Poppins';
     font-weight: 700;
-    color:  #444;
+    color:  #91684a;
     font-size: 32px;
 }
 
@@ -109,8 +109,9 @@ aside {
 
 .navbar-default .nav > li>a,
 .navbar-default .nav>li>a:focus {
+    font-size:22px;
     font-weight: 700;
-    color: #444;
+    color: #91684a;
 }
 
 .navbar-default .nav > li>a:hover,
@@ -139,7 +140,7 @@ aside {
     }
 
     .navbar-default .navbar-header .navbar-brand {
-        color: color: #444;
+        color: color: #91684a;
     }
 
     .navbar-default .navbar-header .navbar-brand:hover,
@@ -149,7 +150,7 @@ aside {
 
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-        color: #000;
+        color: #91684a;
     }
 
     .navbar-default .nav > li>a:hover,
@@ -164,7 +165,7 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #444;
+        color: #91684a;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -174,12 +175,12 @@ aside {
 
     .navbar-default.affix .nav > li>a,
     .navbar-default.affix .nav>li>a:focus {
-        color: #444;
+        color: #91684a;
     }
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #333;
+        color: #91684a;
     }
 }
 
