--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ body.fade-out {
 
 hr {
     max-width: 50px;
-    border-color: #f05f40;
+    border-color: #91684a;
     border-width: 3px;
 }
 
@@ -34,7 +34,7 @@ hr.light {
 }
 
 a {
-    color: #f05f40;
+    color: #91684a;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -42,7 +42,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #eb3812;
+    color: #444;
 }
 
 h1,
@@ -104,7 +104,7 @@ aside {
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-    color:  #333;
+    color:  #444;
 }
 
 .navbar-default .nav > li>a,
@@ -116,7 +116,7 @@ aside {
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-  color: #333
+  color: #444
 }
 
 .navbar-default .nav > li.active>a,
@@ -145,7 +145,7 @@ aside {
 
     .navbar-default .navbar-header .navbar-brand:hover,
     .navbar-default .navbar-header .navbar-brand:focus {
-        color: #333;
+        color: #444;
     }
 
     .navbar-default .nav > li>a,
@@ -155,7 +155,7 @@ aside {
 
     .navbar-default .nav > li>a:hover,
     .navbar-default .nav>li>a:focus:hover {
-        color: #333;
+        color: #444;
     }
 
     .navbar-default.affix {
@@ -170,7 +170,7 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #333;
+        color: #444;
     }
 
     .navbar-default.affix .nav > li>a,
@@ -339,7 +339,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: #f05f40;
+    color: #91684a;
 }
 
 .no-gutter > [class*=col-] {
@@ -401,9 +401,9 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-    border-color: #f05f40;
+    border-color: #91684a;
     color: #f9f8fd;
-    background-color: #f05f40;
+    background-color: #91684a;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -444,12 +444,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #f05f40;
-    background-color: #f05f40;
+    border-color: #91684a;
+    background-color: #91684a;
 }
 
 .btn-primary .badge {
-    color: #f05f40;
+    color: #91684a;
     background-color: #f9f8fd;
 }
 
@@ -497,4 +497,8 @@ body {
 
 .extra-padding {
   padding-top: 100px;
+}
+
+.bigger-text {
+  font-size: 18px;
 }
