--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@ body {
 
 body {
     font-family: 'Poppins';
+    background-color: #f9f8fd;
 }
 
 body {
@@ -21,6 +22,7 @@ body {
 body.fade-out {
     opacity: 0;
     transition: none;
+    background-color: #f9f8fd;
 }
 
 hr {
