--- a/main.css
+++ b/main.css
@@ -509,3 +509,57 @@ body {
     max-height: 100%;
     max-width: 100%;
 }
+
+
+.photo-link .photo-link-caption {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: #313d4b;
+    opacity: 0;
+    background: rgba(255,255,255,.3);
+    -webkit-transition: all .35s;
+    -moz-transition: all .35s;
+    transition: all .35s;
+}
+
+.photo-link .photo-link-caption .photo-link-caption-content {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    transform: translateY(-50%);
+}
+
+.photo-link .photo-link-caption .photo-link-caption-content .project-category,
+.photo-link .photo-link-caption .photo-link-caption-content .project-name {
+    padding: 0 15px;
+    font-family: 'Poppins';
+}
+
+.photo-link .photo-link-caption .photo-link-caption-content .project-category {
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.photo-link .photo-link-caption .photo-link-caption-content .project-name {
+    font-size: 24px;
+}
+
+.photo-link:hover .photo-link-caption {
+    opacity: 1;
+}
+
+@media(min-width:768px) {
+    .photo-link .photo-link-caption .photo-link-caption-content .project-category {
+        font-size: 16px;
+    }
+
+    .photo-link .photo-link-caption .photo-link-caption-content .project-name {
+        font-size: 22px;
+    }
+}
