--- a/main.css
+++ b/main.css
@@ -510,6 +510,10 @@ body {
     max-width: 100%;
 }
 
+.photo-link {
+    max-height: 100%;
+    max-width: 100%;
+}
 
 .photo-link .photo-link-caption {
     display: block;
