--- a/main.css
+++ b/main.css
@@ -511,6 +511,9 @@ body {
 }
 
 .photo-link {
+    display: block;
+    position: relative;
+    margin: 0 auto;
     max-height: 100%;
     max-width: 100%;
 }
