--- a/main.css
+++ b/main.css
@@ -525,9 +525,9 @@ body {
     width: 100%;
     height: 100%;
     text-align: center;
-    color: #313d4b;
+    color:  #f9f8fd;
     opacity: 0;
-    background: rgba(255,255,255,.3);
+    background: rgba(0,0,0,.5);
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
