--- a/main.css
+++ b/main.css
@@ -103,6 +103,9 @@ aside {
     color:  #91684a;
     font-size: 32px;
 }
+.navbar-default .navbar-header .navbar-brand img {
+    vertical-align: bottom;
+}
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
