--- a/main.css
+++ b/main.css
@@ -104,7 +104,7 @@ aside {
     font-size: 32px;
 }
 .navbar-default .navbar-header .navbar-brand img {
-    vertical-align: bottom;
+    vertical-align: middle;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
